k8s/cd/service/cloudflare-gateway/argocd-webhook.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-gateway
  hostnames:
    - hooks.nevi.network
  rules:
    - matches:
        - path:
            type: Exact
            value: /argocd
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: argocd.capi.k8s.nevi.network
            path:
              type: ReplaceFullPath
              replaceFullPath: /api/webhook
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: argocd-webhook
          weight: 1
