k8s/cd/service/cloudflare-gateway/ok.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-ok
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: direct-ok
